# OnBeat

./: .gitignore  AssetManager.cpp  AssetManager.h  AudioManager.cpp  AudioManager.h  CMakeLists.txt  Game.cpp  Game.h  MainMenu.cpp  MainMenu.h  MapSelect.cpp  MapSelect.h  NotesManager.cpp  NotesManager.h  OnBeat  README.md  Screen.h  ScreenManager.cpp  ScreenManager.h  Transitions.cpp  Transitions.h  main.cpp  run.bat
manager/game/: MapManager.cpp  MapManager.h  NotesManager.cpp  NotesManager.h
manager/graphics/: RenderManager.cpp  RenderManager.h  WindowManager.cpp  WindowManager.h
manager/resources/: AssetManager.cpp  AssetManager.h  AudioManager.cpp  AudioManager.h
maps/color/: color.dut
maps/jashin/: jashin.dut  jashin.notes
screens/: MainMenu.cpp  MainMenu.h  MapGrid.cpp  MapGrid.h  MapSelect.cpp  MapSelect.h  Screen.h
